# dpdk_cex_source

./: LICENSE  README.md  meson.build  meson_options.txt
include/aero/: version.h
scripts/: deploy.sh  deploy_single_nic.sh  install_deps.sh  nic_rollback.sh  preflight_check.sh
scripts/bench/: benchmark.sh  benchmark_latency.sh  benchmark_throughput.sh
scripts/tests/: test_e2e.sh  test_integration.sh
scripts/tools/: diagnose_env.sh  gen_market_data.py  mock_exchange.py  remote_exec.exp  verify_network_resilience.sh  verify_vm.py
src/: main.cpp  meson.build  test_eal.c
src/config/: config.c  config.h
src/core/: forwarding.cpp  forwarding.h  init.c  init.h  logging.cpp  logging.h  types.h
src/modules/: meson.build
src/modules/classifier/: classifier.cpp  classifier.h
src/modules/common/: aero_types.h
src/modules/exchange/: bybit_adapter.cpp  bybit_adapter.h  bybit_connection.cpp  bybit_connection.h  exchange_adapter.h  exchange_registry.h  meson.build  okx_adapter.cpp  okx_adapter.h  okx_connection.cpp  okx_connection.h
src/modules/market_data/: meson.build  order_book.cpp  order_book.h
src/modules/network/: boost_websocket_client.cpp  boost_websocket_client.h  concurrentqueue.h  meson.build  micro_tcp.cpp  micro_tcp.h  network_utils.cpp  network_utils.h  proto.h  tls_socket.cpp  tls_socket.h  udp_publisher.cpp  udp_publisher.h  websocket_client.cpp  websocket_client.h  websocket_framer.h
src/modules/parser/: json_parser.cpp  json_parser.h  meson.build  parser.cpp  parser.h  protocol.h
src/modules/telemetry/: latency_histogram.h
src/packet/: classifier.c  classifier.h
